# Olivia-Hotel-Receptionist

./: .dockerignore  .gitattributes  .gitignore  AI_CONTEXT.md  Dockerfile  README.md  app.py  app_gradio.py  fix_mcp.py  hf_skills.md  package.json  patch_mcp.py  pyproject.toml  pyrightconfig.json  render.yaml  requirements.txt  requirements_hf.txt  supervisord.conf  test_api.py  vercel.json
.github/workflows/: keep_alive.yml
api/: dispatch.js  token.js
data/: .gitkeep
frontend/: README.md  index.html
frontend/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
frontend/src/app/api/livekit/: route.ts
frontend/src/app/book/: page.tsx
frontend/src/components/: LenisProvider.tsx  OliviaWidget.tsx  PullToVoiceActivator.tsx
scripts/: generate_gmail_token.py
src/: __init__.py  agent_brain.py  database.py  frontend_server.py  lock_scheduler.py  mcp_server.py  payment_portal.py  voice_server.py
src/prompts/: agent_instructions_compact.md
templates/: confirmation_invoice_template.html  invoice_template.html  payment_page.html  payment_success.html
tests/: dispatch_test.py  test_cartesia.py  test_cartesia_direct.py  test_cartesia_models.py  test_e2e.py  test_email.py  test_fastmcp.py  test_gemini.py  test_google.py  test_keys.py  test_m_run.py  test_mcp_client.py  test_ws.py
