[project]
name = "nexcell-voice-agent"
version = "2026.1.0"
description = "NexCell AI Voice Assistant – FastMCP + LangGraph orchestration layer"
requires-python = ">=3.11"
dependencies = [
    # MCP server layer
    "fastmcp>=2.0.0",
    "mcp>=1.2.0",
    # LangGraph orchestration
    "langgraph>=0.2.6",
    "langchain>=1.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.1.0",
    "langchain-mcp-adapters>=0.1.0",
    # Pydantic & settings
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    # Async HTTP (used by MCP SSE transport)
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
    # Environment variable loading
    "python-dotenv>=1.0.0",
    "livekit-agents>=1.6.4",
    "livekit-plugins-langchain>=1.6.4",
    "livekit-plugins-openai>=1.6.4",
    "livekit-plugins-silero>=1.6.4",
    "livekit-plugins-inworld>=1.6.4",
    "livekit-plugins-elevenlabs>=1.6.4",
    "livekit-plugins-cartesia>=1.6.4",
    "langchain-groq>=1.1.3",
    "jinja2>=3.1.6",
    "langchain-google-genai>=4.2.7",
    "livekit-plugins-google>=1.6.4",
]

# No build-system defined intentionally — this is a scripts-only project.
# Install dependencies with:
#   uv pip install -r requirements.txt
# or simply let uv manage a venv via:
#   uv pip install langchain-mcp-adapters langgraph langchain-openai fastmcp mcp pydantic python-dotenv httpx httpx-sse
